src/main/kotlin/org/example/firstkopring/global/error/exception/BusinessException.kt
package org.example.firstkopring.global.error.exception

class BusinessException(
    val exception: ErrorCode
): RuntimeException()